Resolve issue where scrollbar appearing and disappearing. Modify custom.css properties

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 body.noscroll {
-    overflow: hidden;
+    
 }
 
 #cn-content h2 {
